# qna-medical-referenced

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  20260308-tracing-improvements-summary.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  TEST_MIGRATION.md  docker-compose.yml  mkdocs.yml  pyproject.toml  verify_tracing_improvements.py
.context7/: svelte-5-best-practices.md  wandb-best-practices.md
.github/workflows/: ci.yml  docs-consistency.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.playwright-mcp/: page-2026-04-17T05-35-38-966Z.yml  page-2026-04-17T05-36-18-647Z.yml  page-2026-04-17T05-36-31-721Z.yml  page-2026-04-17T05-36-53-331Z.yml  page-2026-04-17T05-37-01-890Z.yml  page-2026-04-17T05-54-15-246Z.yml  page-2026-04-17T05-54-26-002Z.yml  page-2026-04-17T05-55-37-230Z.yml
config/: settings.yaml
data/: rate_limits.db
docs/: 20250304-frontend-dashboard-phase1.md  20260217-pipeline-lineage-visualization-design.md  20260217-playwright-final-summary.md  20260217-playwright-testing-summary.md  20260217-verification-summary.md  20260416-feature-flags.md  20260424-openapi-swagger.yaml  20260426-codebase-audit.md  ARCHITECTURE.md  ISSUES.md  NUKE_AND_REGENERATE.md  RAG_SYSTEM.md  README.md  TEST.md  ablation_study.md  ablation_study_full_results.md  admin-api-auth.md  anonymous-sessions.md  configuration.md  dependencies.md  envision_function.md  eval_plan.md  feature_ablation_findings.md  local-workflows.md  public-app-deployment.md  quickstart.md  technical_roadmap.md  wandb-metrics-verbosity.md
docs/architecture/: overview.md  pipeline-strategies.md  rag-system.md
docs/evaluation/: 20260227-step-evaluation-impl.md  pipeline_quality_assessment_plan.md
docs/notebooks/: chunking-strategy-analysis.md  data-exploration.md  feature-ablation-analysis.md  index.md  ingestion-pipeline.md  retrieval-pipeline.md
docs/plans/: 2026-02-27-frontend-enhancements-design.md  20260320-dependency-verification.md  20260414-phase2-followup-handoff.md  20260415-feature-ablation-run-handoff.md  20260416-medical-copilot-design.md  20260416-phase1-exploration-design.md  pipeline-quality-assessment-plan.md
docs/testing/: backend-tests.md  playwright.md
experiments/: medical_semantic_exp.yaml
experiments/outputs/: medical_semantic_chunking_exp_report.json  medical_semantic_chunking_exp_report.md
experiments/v1/: baseline.yaml  baseline_expanded_768dim.yaml  chunking_strategies.yaml  comprehensive_ablation.yaml  extraction_strategies.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  README.md  package-lock.json  package.json  playwright.config.ts
frontend/test-results/: .last-run.json
frontend/tests/: chat.spec.ts  helpers.ts  markdown-rendering.spec.ts  pipeline.spec.ts  quality-metrics.spec.ts  visual-verification.spec.ts
notebooks/: 01_data_exploration.py  01_data_exploration.qmd  02_chunking_analysis.py  02_chunking_analysis.qmd  03_ingestion_pipeline.qmd  04_retrieval_pipeline.qmd  05_ablation_analysis.qmd  _quarto.yml
scripts/: benchmark_deepeval_multi.py  benchmark_deepeval_single.py  check_docs_consistency.sh  cleanup_wandb_runs.py  convert_html_to_md.py  download_medical_content.py  download_nltk_data.py  generate_notebook_docs.py  run_feature_ablations.py  run_missing_ablations.sh  run_variant_clean.py
scripts/manual/: README.md
src/: main.py  main_debug.py  models.py  run.py  source_metadata.py
src/api/: __init__.py  schemas.py
src/app/: __init__.py  exceptions.py  factory.py  logging.py  security.py  session.py
src/cli/: __init__.py  eval_pipeline.py  ingest.py  serve.py  serve_production.py
src/compat/: __init__.py  pipeline.py
src/config/: __init__.py  context.py  paths.py  settings.py
src/evals/: __init__.py  artifacts.py  dataset_builder.py  deepeval_models.py  llm_judges.py  metrics.py  pipeline_assessment.py  schemas.py  step_checks.py
src/experiments/: __init__.py  comparison_report.py  config.py  experiment_config.py  feature_ablation_runner.py  feature_addition_runner.py  metric_utils.py  run_addition.py  wandb_history.py  wandb_tracking.py
src/infra/: __init__.py  di.py
src/ingest/: __init__.py
src/ingestion/: __init__.py  artifacts.py  pipeline.py
src/llm/: __init__.py  client.py
src/middleware/: __init__.py  auth.py  rate_limit.py  request_id.py
src/pipeline/: L0_download.py  L1_html_to_md.py  L2_pdf_loader.py  L3_chunker.py  L4_reference_loader.py  L5_vector_store.py  L6_rag_pipeline.py  __init__.py  _vector_embedding.py  _vector_index.py  _vector_persistence.py  _vector_search.py  _vector_text.py  run_pipeline.py
src/processors/: __init__.py  chunker.py
src/rag/: __init__.py  config.py  diversification.py  formatting.py  hyde.py  index.py  medical_expansion.py  production_profile.py  query_expansion.py  reranker.py  retrieval.py  retriever.py  runtime.py  trace_models.py
src/services/: __init__.py  base_service.py  chat_service.py  rag_service.py  (+2 more)
tests/: conftest.py  test_answer_eval_cache.py  test_answer_eval_deepeval.py  test_answer_eval_deepeval_async.py  test_app_security.py  test_backend_e2e_real_apis.py  test_chat_multi_turn.py  test_chat_sources.py  test_chroma_migration.py  test_chroma_search.py  test_chunker.py  test_concurrent_access.py  test_configuration.py  test_dataset_builder.py  test_deepeval_models.py  test_download_pdfs_manifest.py  test_download_web_manifest.py  test_embedding.py  test_eval_api_deepeval.py  test_eval_artifacts.py  test_eval_deepeval.py  test_eval_error_handling.py  test_eval_metrics.py  test_eval_metrics_utils.py  test_eval_pipeline_cli.py  test_eval_retrieval_metrics_extended.py  test_evaluation_routes.py  test_experiment_config.py  test_experiment_manifest.py  test_hyde.py  test_ingestion_error_handling.py  test_keyword_index.py  test_litellm_client.py  test_llm_judges.py  test_medical_chunking.py  test_medical_metrics.py  test_orchestrator_deepeval.py  test_pdf_loader.py  test_pipeline_assessment_smoke.py  test_pipeline_quality_upgrades.py  (+14 more)
(+251 files in other folders)
