[project]
name = "qna-medical-referenced"
version = "0.1.0"
description = "Medical Q&A chatbot with RAG pipeline for health screening interpretation"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "openai>=1.0.0",
    "pypdf>=6.7.0",
    "pdfplumber>=0.11.4",
    "python-dotenv>=1.2.1",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.40.0",
    "nltk>=3.9.2",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.0",
    "markdownify>=0.14.0",
    "trafilatura>=1.12.2",
    "wandb>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
evaluation = [
    "deepeval>=2.0.0",
    "litellm>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "live_api: requires live Qwen API access",
    "deepeval: marks tests as DeepEval integration tests (slow, requires API)",
    "e2e_real_apis: marks tests as end-to-end tests with real API integrations (requires ENABLE_REAL_API_TESTS=1)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]
disable_error_code = [
    "import-untyped",
    "annotation-unchecked",
]

[[tool.mypy.overrides]]
module = [
    "nltk.*",
    "google.*",
    "deepeval.*",
]
ignore_missing_imports = true
